added wado image loader

--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
   "name": "dcmviewer",
+  "homepage": "https://zhongyi80.github.io/dcmviewer/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.13",
+    "cornerstone-core": "^2.6.0",
+    "cornerstone-math": "^0.1.9",
+    "cornerstone-tools": "^6.0.1",
+    "cornerstone-wado-image-loader": "^4.0.4",
+    "cornerstone-web-image-loader": "^2.1.1",
+    "daikon": "^1.2.42",
+    "dicom-parser": "^1.8.11",
+    "gh-pages": "^3.2.3",
+    "hammerjs": "^2.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -13,6 +24,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
